@@ -10,5 +10,7 @@ A few notes regarding journalism's internal architecture. (Users should not care
 
 * ColumnMapping, Row Sequence, Column, and Row have **read only** access to a Table's private variables. They are purely a formal abstraction and for purposes of encapsulation they can be treated as a single unit.
 
+* Columns lazy construct a copy of their data from their parent Table and then cache it.
+
 * Operations accept functional arguments wherever possible for maximum flexibility.
 
